changes: removed section-area ender fixed gaps changed font

--- a/holyland caskets/css/main.css
+++ b/holyland caskets/css/main.css
@@ -44,7 +44,7 @@
 
 body {
   color: #777777;
-  font-family: "Roboto", sans-serif;
+  font-family: "Helvetica", Verdana, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.625em;
@@ -2015,12 +2015,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     bottom: 0px;
     z-index: -1;
     width: 240px;
-    height: 240px;
-    background: linear-gradient(to bottom right, transparent 0%, transparent 50%, #ee722a 50%, #854b16 100%);
-    background: -webkit-linear-gradient(to bottom right, transparent 0%, transparent 50%, #ee722a 50%, #854b16 100%);
-    background: -moz-linear-gradient(to bottom right, transparent 0%, transparent 50%, #ee722a 50%, #854b16 100%);
-    background: -ms-linear-gradient(to bottom right, transparent 0%, transparent 50%, #ee722a 50%, #854b16 100%);
-    background: -o-linear-gradient(to bottom right, transparent 0%, transparent 50%, #ee722a 50%, #854b16 100%); }
+    height: 240px;}
     @media (max-width: 991px) {
       .feature-area:after {
         display: none; } }
